# bytebot

./: .gitignore  Bytebot-MVP.md  README.md  pyproject.toml
experiments/: notepad_macro.py
mvp/agent/: actions.py  executor.py
mvp/planner/: rule_based.py
mvp/runtime/: pipeline.py  reporting.py
notes/: desktop-probe.md
templates/: notepad_write.yaml
tests/: test_actions.py  test_pipeline.py  test_planner.py
